<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="string_continue">Continue</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="unter">Unter</string>
    <string name="need_a_ride">Need a ride?</string>
    <string name="no_account">No account?</string>
    <string name="sign_up">Sign up</string>
    <string name="here"> here.</string>
    <string name="close_icon">Close icon.</string>
    <string name="user_name">Name</string>
    <string name="sign_up_for_free">Sign up for free.</string>
    <string name="log_out">Log out</string>
    <string name="edit_avatar">Edit avatar.</string>
    <string name="user_avatar">User avatar.</string>
    <string name="passenger">Passenger</string>
    <string name="vehicle_avatar">Vehicle avatar.</string>
    <string name="edit">Edit</string>
    <string name="vehicle_description">Vehicle Description</string>
    <string name="lorem_ipsum">John Wick is a great movie series. I am listening to the soundtrack while I write this filler text.</string>
    <string name="register_to_become_driver">Register now to become a driver!</string>
    <string name="register">Register</string>
    <string name="driver_registration">Driver Registration</string>
    <string name="please_upload_an_image">Please upload an image of your vehicle.</string>
    <string name="please_provide_a_description">Please provide a description of your transportation method.</string>
    <string name="description">Description</string>
    <string name="apply">Apply</string>
    <string name="passenger_requests">Passenger Requests</string>
    <string name="no_passengers">No passengers available currently.</string>
    <string name="passenger_location">Passenger Location</string>
    <string name="cancel">Cancel</string>
    <string name="arrived_at_destination">Arrived At Destination\n(Hold Icon Down)</string>
    <string name="pick_up_passenger">Pick Up Passenger\n(Hold Icon Down)</string>
    <string name="return_to_dashboard">Return to dashboard</string>
    <string name="ride_completed">Ride\nCompleted</string>
    <string name="generic_error">An error has occurred.</string>
    <string name="service_error">Unable to connect to service.</string>
    <string name="permissions_required_to_use_this_app">Location permission is required.</string>
    <string name="invalid_credentails">Invalid credentials.</string>
    <string name="an_account_already_exists">An account already exists with this number.</string>
    <string name="driver">Driver</string>
    <string name="update_successful">Update successful.</string>
    <string name="system_settings_are_preventing_location_updates">System settings are preventing location updates</string>
    <string name="location_must_be_enabled">This app requires device location to be accessible during rides.</string>
    <string name="loading">Loading...</string>
    <string name="enter_a_destination">Enter a destination</string>
    <string name="search">Search</string>
    <string name="unable_to_retrieve_coordinates_address">Unable to retrieve coordinates for selected address.</string>
    <string name="unable_to_retrieve_coordinates_user">Unable to retrieve coordinates for your device.</string>
    <string name="looking_for_a_ride">Looking for\na ride...</string>
    <string name="destination">Destination</string>
    <string name="unable_to_get_map_directions">Unable to get map directions.</string>
    <string name="driver_is">"Driver is "</string>
    <string name="away">" away"</string>
    <string name="searching">Searching...</string>
    <string name="passenger_is">"Passenger is "</string>
    <string name="destination_is">"Destination is "</string>
    <string name="contact_passenger">Contact Passenger</string>
    <string name="contact_driver">Contact Driver</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hide_password">Hide password</string>
    <string name="show_password">Show password</string>
    <string name="check_again">Check Again</string>
    <string name="new_messages">" new messages"</string>
    <string name="you_have_messages">You have messages</string>
    <string name="unable_to_calculate_distance">" Unable to calculate"</string>
    <string name="trip_is">"Trip is: "</string>
    <string name="from_passenger">" from passenger"</string>
    <string name="unable_to_retrieve_address">Unable to retrieve address</string>
</resources>