<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".dashboards.driver.DriverDashboardFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Searching for Passengers    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchingLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/requestsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"
            android:text="@string/passenger_requests"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/passengerList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/requestsTitle"
            tools:itemCount="3"
            tools:listitem="@layout/list_item_passenger" />

        <LinearLayout
            android:id="@+id/passengersLoadingLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/requestsTitle">

            <TextView
                android:id="@+id/noPassengersAvailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="64dp"
                android:layout_marginHorizontal="64dp"
                android:fontFamily="@font/poppins_light"
                android:includeFontPadding="false"
                android:text="@string/no_passengers"
                android:gravity="center"
                android:textColor="@color/color_light_grey"
                android:textSize="36sp" />

            <Button
                style="@style/ThemeOverlay.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_again"
                app:backgroundTint="@color/color_primary"
                android:id="@+id/checkAgainBT"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rideLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <include
            android:id="@+id/mapLayout"
            layout="@layout/view_map_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/mapGuide"
            />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/mapGuide"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4"
            />

        <!--    Passenger info        -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/passengerInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constrainedHeight="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mapLayout"
            tools:background="@android:color/white">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/avatar"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_margin="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/circleImageView"
                tools:src="@drawable/donkey" />

            <TextView
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:includeFontPadding="false"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/avatar"
                app:layout_constraintTop_toTopOf="@+id/avatar"
                tools:text="Saitama" />

            <TextView
                android:id="@+id/tripDistance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/poppins_light"
                android:includeFontPadding="false"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/avatar"
                app:layout_constraintTop_toBottomOf="@+id/username"
                tools:text="Ride is 2.5km" />

            <Button
                android:paddingStart="16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/color_primary"
                android:id="@+id/chatButton"
                android:text="@string/contact_passenger"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textColor="@android:color/white"
                android:includeFontPadding="false"
                android:drawableStart="@drawable/ic_message"
                android:drawablePadding="16dp"
                android:gravity="start|center_vertical"
                app:layout_constraintTop_toBottomOf="@id/avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <View
                android:id="@+id/bottomDiv"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:alpha="0.12"
                android:background="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chatButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Advance ride      -->
        <include
            android:id="@+id/advanceLayout"
            layout="@layout/view_advance_ride_state"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passengerInfoLayout" />

        <!-- Return to dashboard      -->
        <include
            android:id="@+id/returnLayout"
            layout="@layout/view_ride_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passengerInfoLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        layout="@layout/view_loading"
        android:id="@+id/loadingView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>